# matrix

./: .env.example  .gitignore  .hidden-items.json  PLAN.md  README.md  main.py  mesa_test.py  network_builder.py  package-lock.json  planner-system-prompt.txt  project.md  requirements.txt  serve.py  server.py  sm_chat.py  start.sh
.venv.windows.bak/: pyvenv.cfg
.venv.windows.bak/Scripts/: activate.bat
avatars/: agent_to_avatar.json  avatar_catalog.json  build_avatar_catalog.py  generate_avatars.py  pick_avatars_modal.py
backend/: graph.json  image_server.py  interactive_spread.html  main.py  network_builder.py  pyproject.toml  run_tx_tax_proposal_v1.csv  server.py  simulate_tx_tax.py  simulation_log.json  simulation_map.html  visualize_spread.py
backend-test/: agents.csv  data.csv  gen_portraits.py  mesa.py  script.py  server.py
backend-test/out_images/: index.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: AgentLiveAvatarCard.jsx  DotWaveBackground.jsx  GraphCirclePanel.jsx  LiveKitTester.jsx
