[project]
name = "matrix-backend"
version = "0.1.0"
description = "Backend APIs for matrix simulation services"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pyvis>=0.3.2,<1.0.0",
  "modal>=1.2.0,<2.0.0",
  "faster-whisper>=1.1.0,<2.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
]
